# fast_screenshot

./: .gitignore  CMakeLists.txt
src/: main.cpp  screenshot.cpp  screenshot.h  simple.cpp
